--- a/components/openai-support/pom.xml
+++ b/components/openai-support/pom.xml
@@ -9,9 +9,12 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>stories</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>openai-support</artifactId>
     <packaging>jar</packaging>
+
+    <properties>
+        <spring-cloud.version>2022.0.2</spring-cloud.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -19,15 +22,21 @@
             <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.ahmedmq</groupId>
-            <artifactId>openai-support</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
