--- a/components/pom.xml
+++ b/components/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>stories</module>
         <module>images</module>
+        <module>openai-support</module>
     </modules>
 
     <dependencies>
