Enhance UI and test fixes

--- a/applications/stories-app/src/test/resources/application-test.yml
+++ b/applications/stories-app/src/test/resources/application-test.yml
@@ -11,5 +11,7 @@ openai:
     read-timeout: 3000
     connect-timeout: 3000
   urls:
-    base-url: <<OVERRIDDEN BY WIREMOCK>>
+    base-url: https://api.openai.com/v1
     chat-url: /chat/completions
+
+
