--- a/applications/stories-app/src/test/resources/application-test.yml
+++ b/applications/stories-app/src/test/resources/application-test.yml
@@ -13,5 +13,8 @@ openai:
   urls:
     base-url: https://api.openai.com/v1
     chat-url: /chat/completions
-
+spring:
+  flyway:
+    locations: filesystem:/boot-chatgpt-dalle-storyteller/databases/stories-database
+    enabled: true
 
