--- a/applications/stories-app/src/test/resources/application-test.yml
+++ b/applications/stories-app/src/test/resources/application-test.yml
@@ -4,6 +4,7 @@ stories:
 logging:
   level:
     com.ahmedmq.story: DEBUG
+    org.flywaydb: DEBUG
 openai:
   api-key: abc
   gpt-model: gpt-3.5-turbo
@@ -14,7 +15,11 @@ openai:
     base-url: https://api.openai.com/v1
     chat-url: /chat/completions
 spring:
+  datasource:
+    username: stories
+    password: password
+    url: jdbc:postgresql://localhost:5432/stories-database
+    driver-class-name: org.postgresql.Driver
   flyway:
-    locations: filesystem:/boot-chatgpt-dalle-storyteller/databases/stories-database
+    locations: filesystem:./../../databases/stories-database
     enabled: true
-
